--- a/_output.yml
+++ b/_output.yml
@@ -6,9 +6,13 @@ bookdown::gitbook:
       after: |
         <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
     download: ["pdf", "epub"]
+    fontsettings:
+      family: serif
     sharing:
-        facebook: false
-        twitter: false
+      facebook: no
+      github: yes
+      linkedin: yes
+      all: []
 bookdown::pdf_book:
   includes:
     in_header: preamble.tex
